--- a/index.html
+++ b/index.html
@@ -3,292 +3,271 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>RJ पापड़ — Multilingual AutoSave</title>
+<title>RJ पापड़ — Multilingual AutoSave + Splash Logo</title>
+
 <style>
-  *{box-sizing:border-box;margin:0;padding:0}
-  html,body{height:100%;width:100%;font-family:'Noto Sans Devanagari',sans-serif;background:#fff8e1;color:#222;overflow-x:hidden}
-  /* Fullscreen logo area */
-  .logo-full {
-    position:relative;
-    width:100vw;
-    height:100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
+  *{margin:0;padding:0;box-sizing:border-box}
+  html,body{
+    height:100%;
+    width:100%;
+    font-family:'Noto Sans Devanagari',sans-serif;
+    background:#fff8e1;
+    color:#222;
+    overflow-x:hidden;
+  }
+
+  /* 🔶 Splash Logo (fullscreen page) */
+  #logoArea {
+    position:fixed;
+    top:0;left:0;
+    width:100vw;height:100vh;
     background:#fff;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    z-index:1000;
+    transition:opacity 0.8s ease;
   }
-  .logo-full img{
-    width:100vw;
-    height:100vh;
-    object-fit:cover;
-    display:block;
+  #logoArea img {
+    width:70vw;          /* logo छोटा किया */
+    max-width:300px;
+    height:auto;
+    margin-bottom:20px;
+    border-radius:10px;
   }
-  /* language buttons overlay */
-  .lang-bar{
-    position:absolute;
-    bottom:22px;
-    left:50%;
-    transform:translateX(-50%);
+  .lang-bar {
     display:flex;
     gap:10px;
-    z-index:10;
   }
-  .lang-btn{
+  .lang-btn {
+    background:#ffc107;
+    border:none;
+    padding:10px 18px;
+    border-radius:8px;
+    font-weight:700;
+    cursor:pointer;
+    box-shadow:0 2px 4px rgba(0,0,0,0.15);
+  }
+  .lang-btn:hover{background:#ffb300}
+
+  /* 🔸 Content section */
+  .site {
+    max-width:900px;
+    margin:0 auto;
+    padding:12px;
+  }
+  .content { display:none; }
+  .content.active { display:block; animation:fadeIn .3s ease-in; }
+  @keyframes fadeIn{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:none}}
+
+  .banner { width:100%; display:block; border-radius:0; margin:10px 0; }
+  h1 { text-align:center; color:#c47f00; margin:10px 0 15px; font-size:22px; }
+
+  .form-card {
+    background:#fff;
+    padding:16px;
+    border-radius:10px;
+    box-shadow:0 4px 10px rgba(0,0,0,0.08);
+    max-width:700px;
+    margin:10px auto;
+  }
+  input {
+    width:100%;
+    padding:10px;
+    margin:6px 0;
+    border:1px solid #ccc;
+    border-radius:6px;
+    font-size:15px;
+  }
+  .controls { display:flex; gap:8px; margin-top:8px; flex-wrap:wrap; }
+  .save-btn {
     background:#ffc107;
     border:none;
     padding:10px 16px;
     border-radius:8px;
     font-weight:700;
     cursor:pointer;
-    box-shadow:0 3px 6px rgba(0,0,0,0.12);
   }
-  .lang-btn:hover{background:#ffb300}
-  /* content area */
-  .site {
-    padding:16px;
-    max-width:980px;
-    margin:0 auto 40px;
-  }
-  .content {
-    display:none;
-  }
-  .content.active { display:block; animation:fadeIn .25s ease-in; }
-  @keyframes fadeIn{from{opacity:0;transform:translateY(6px)} to{opacity:1;transform:none}}
-  .banner { width:100%; display:block; border-radius:0; margin:10px 0; object-fit:cover; }
-  h1 { color:#c47f00; text-align:center; margin:8px 0 12px; font-size:22px; }
-  .form-card{
-    background:#fff;
-    max-width:420px;
-    margin:12px auto;
-    padding:16px;
-    border-radius:10px;
-    box-shadow:0 6px 18px rgba(0,0,0,0.06);
-  }
-  input{width:100%;padding:10px;margin:8px 0;border:1px solid #ccc;border-radius:6px;font-size:15px}
-  .row{display:flex;gap:8px}
-  .save-btn{background:#ffc107;border:none;padding:10px 14px;border-radius:8px;font-weight:700;cursor:pointer}
   .save-btn:hover{background:#ffb300}
-  .controls{display:flex;gap:8px;justify-content:center;margin-top:10px;flex-wrap:wrap}
-  .note{font-size:13px;color:#555;text-align:center;margin-top:10px}
-  footer{ text-align:center;color:#666;margin:20px 0;font-size:13px }
-  /* small responsive tweaks */
-  @media(max-width:520px){
-    h1{font-size:20px}
-    .lang-btn{padding:10px 12px;font-size:14px}
+  .small-btn{
+    background:#eee;
+    border:none;
+    padding:8px 10px;
+    border-radius:8px;
+    cursor:pointer;
   }
+  .reg-item{
+    background:#fff7e6;
+    padding:8px;
+    margin:8px 0;
+    border-radius:8px;
+    display:flex;
+    flex-wrap:wrap;
+    align-items:center;
+    gap:8px;
+  }
+  .icon-btn{
+    background:#fff;
+    border:1px solid #ddd;
+    padding:6px 8px;
+    border-radius:6px;
+    cursor:pointer;
+  }
+  footer{ text-align:center; color:#666; font-size:13px; margin:20px 0;}
 </style>
 </head>
+
 <body>
 
-  <!-- FULLSCREEN LOGO -->
-  <div id="logoArea" class="logo-full" aria-hidden="false">
-    <!-- Use your provided logo here -->
-    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png" alt="RJ Logo">
-    <div class="lang-bar" role="navigation" aria-label="Languages">
-      <button class="lang-btn" onclick="chooseLang('hi')">हिंदी</button>
-      <button class="lang-btn" onclick="chooseLang('en')">English</button>
-      <button class="lang-btn" onclick="chooseLang('gu')">ગુજરાતી</button>
-    </div>
+<!-- 🟢 Splash Logo -->
+<div id="logoArea">
+  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png" alt="RJ Logo">
+  <div class="lang-bar">
+    <button class="lang-btn" onclick="chooseLang('hi')">हिंदी</button>
+    <button class="lang-btn" onclick="chooseLang('en')">English</button>
+    <button class="lang-btn" onclick="chooseLang('gu')">ગુજરાતી</button>
   </div>
+</div>
 
-  <!-- MAIN SITE CONTENT (for each language) -->
-  <div class="site">
+<!-- 🔸 Website content -->
+<div class="site">
 
-    <!-- HINDI -->
-    <section id="hi" class="content" aria-hidden="true">
-      <img id="hi-top" class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
-      <h1>RJ पापड़ में आपका स्वागत है!</h1>
+  <!-- HINDI -->
+  <section id="hi" class="content">
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
+    <h1>RJ पापड़ में आपका स्वागत है!</h1>
 
-      <div class="form-card">
-        <form onsubmit="return false;">
-          <input id="name-hi" type="text" placeholder="नाम (वैकल्पिक)">
-          <input id="mobile-hi" type="tel" placeholder="मोबाइल नंबर (अनिवार्य)">
-          <div class="controls">
-            <button class="save-btn" onclick="saveForm('hi')">💾 सेव करें</button>
-            <button class="save-btn" onclick="clearForm('hi')">🗑️ क्लियर</button>
-          </div>
-          <p class="note">डेटा ब्राउज़र में Auto-save होता है — बार-बार edit करने से कुछ नहीं निकलेगा।</p>
-        </form>
+    <div class="form-card">
+      <div class="controls">
+        <button class="save-btn" onclick="saveAll('hi')">💾 सेव करें</button>
+        <button class="small-btn" onclick="addRegistrant('hi')">➕ ज्वाइंट जोड़ें</button>
       </div>
+      <div id="regs-hi"></div>
+    </div>
 
-      <img id="hi-bottom" class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
-    </section>
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
+  </section>
 
-    <!-- ENGLISH -->
-    <section id="en" class="content" aria-hidden="true">
-      <img id="en-top" class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
-      <h1>Welcome to RJ Papad!</h1>
+  <!-- ENGLISH -->
+  <section id="en" class="content">
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
+    <h1>Welcome to RJ Papad!</h1>
 
-      <div class="form-card">
-        <form onsubmit="return false;">
-          <input id="name-en" type="text" placeholder="Name (Optional)">
-          <input id="mobile-en" type="tel" placeholder="Mobile Number (Required)">
-          <div class="controls">
-            <button class="save-btn" onclick="saveForm('en')">💾 Save</button>
-            <button class="save-btn" onclick="clearForm('en')">🗑️ Clear</button>
-          </div>
-          <p class="note">Data is auto-saved in your browser — nothing will be lost by editing repeatedly.</p>
-        </form>
+    <div class="form-card">
+      <div class="controls">
+        <button class="save-btn" onclick="saveAll('en')">💾 Save</button>
+        <button class="small-btn" onclick="addRegistrant('en')">➕ Add Joint</button>
       </div>
+      <div id="regs-en"></div>
+    </div>
 
-      <img id="en-bottom" class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
-    </section>
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
+  </section>
 
-    <!-- GUJARATI -->
-    <section id="gu" class="content" aria-hidden="true">
-      <img id="gu-top" class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
-      <h1>RJ પાપડ માં આપનું સ્વાગત છે!</h1>
+  <!-- GUJARATI -->
+  <section id="gu" class="content">
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
+    <h1>RJ પાપડ માં આપનું સ્વાગત છે!</h1>
 
-      <div class="form-card">
-        <form onsubmit="return false;">
-          <input id="name-gu" type="text" placeholder="નામ (વૈકલ્પિક)">
-          <input id="mobile-gu" type="tel" placeholder="મોબાઇલ નંબર (આવશ્યક)">
-          <div class="controls">
-            <button class="save-btn" onclick="saveForm('gu')">💾 સેવ કરો</button>
-            <button class="save-btn" onclick="clearForm('gu')">🗑️ ક્લિયર</button>
-          </div>
-          <p class="note">ડેટા બ્રાઉઝર માં auto-save થાય છે — વારંવાર એડિટ કરતાં કશુંક નાલૂ ગયુ નથી.</p>
-        </form>
+    <div class="form-card">
+      <div class="controls">
+        <button class="save-btn" onclick="saveAll('gu')">💾 સેવ કરો</button>
+        <button class="small-btn" onclick="addRegistrant('gu')">➕ જોડણી ઉમેરો</button>
       </div>
+      <div id="regs-gu"></div>
+    </div>
 
-      <img id="gu-bottom" class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
-    </section>
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
+  </section>
+</div>
 
-  </div> <!-- /site -->
-
-  <footer>© 2025 RJ पापड़</footer>
+<footer>© 2025 RJ Papad | Auto Save Enabled</footer>
 
 <script>
-/*
-  Multilingual auto-save system
-  - Uses localStorage key: "rjpapad_multi_v1"
-  - Structure saved: { lang: 'hi'|'en'|'gu', data: { hi:{name,mobile}, en:{...}, gu:{...} } }
-*/
+const STORAGE_KEY="rjpapad_multi_v3";
 
-/* DEFAULT banner URLs (you can change these if you have language-specific images) */
-const DEFAULT_TOP = {
-  hi: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png",
-  en: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png",
-  gu: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"
-};
-const DEFAULT_BOTTOM = {
-  hi: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png",
-  en: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png",
-  gu: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
-};
-
-const STORAGE_KEY = "rjpapad_multi_v1";
-
-/* load saved state or default */
+/* ========== State functions ========== */
 function loadState(){
   try{
-    const raw = localStorage.getItem(STORAGE_KEY);
-    if(!raw) return { lang: null, data: { hi:{},en:{},gu:{} } };
-    return JSON.parse(raw);
-  }catch(e){
-    console.error("parse error", e);
-    return { lang: null, data: { hi:{},en:{},gu:{} } };
-  }
+    const raw=localStorage.getItem(STORAGE_KEY);
+    if(!raw)return{lang:null,data:{hi:{list:[]},en:{list:[]},gu:{list:[]}}};
+    const obj=JSON.parse(raw);
+    obj.data=obj.data||{hi:{list:[]},en:{list:[]},gu:{list:[]}};
+    return obj;
+  }catch{return{lang:null,data:{hi:{list:[]},en:{list:[]},gu:{list:[]}}}}
 }
-function saveState(state){
-  localStorage.setItem(STORAGE_KEY, JSON.stringify(state));
+function saveState(s){localStorage.setItem(STORAGE_KEY,JSON.stringify(s));}
+
+/* ========== Render forms ========== */
+function renderList(lang){
+  const c=document.getElementById(`regs-${lang}`);
+  c.innerHTML="";
+  const st=loadState();
+  const list=st.data[lang].list||[];
+  if(list.length===0){addRegistrant(lang);return;}
+  list.forEach((r,i)=>{
+    const div=document.createElement("div");
+    div.className="reg-item";
+    const name=document.createElement("input");
+    name.placeholder=lang==="hi"?"नाम (वैकल्पिक)":lang==="en"?"Name (Optional)":"નામ (વૈકલ્પિક)";
+    name.value=r.name||"";
+    const mobile=document.createElement("input");
+    mobile.placeholder=lang==="hi"?"मोबाइल नंबर (अनिवार्य)":lang==="en"?"Mobile Number (Required)":"મોબાઇલ નંબર (આવશ્યક)";
+    mobile.value=r.mobile||"";
+    name.oninput=()=>update(lang,i,name.value,mobile.value);
+    mobile.oninput=()=>update(lang,i,name.value,mobile.value);
+    const del=document.createElement("button");
+    del.className="icon-btn";
+    del.textContent="🗑️";
+    del.onclick=()=>delItem(lang,i);
+    div.append(name,mobile,del);
+    c.append(div);
+  });
+}
+function addRegistrant(lang){
+  const s=loadState();
+  s.data[lang].list.push({name:"",mobile:""});
+  saveState(s);
+  renderList(lang);
+}
+function update(lang,i,name,mobile){
+  const s=loadState();
+  s.data[lang].list[i]={name,mobile};
+  saveState(s);
+}
+function delItem(lang,i){
+  const s=loadState();
+  s.data[lang].list.splice(i,1);
+  saveState(s);
+  renderList(lang);
+}
+function saveAll(lang){
+  alert("✅ "+(lang==="hi"?"डेटा सेव हो गया":"en"===lang?"Data Saved":"ડેટા સેવ થઈ ગયો"));
 }
 
-/* show/hide logo and show selected language content */
+/* ========== Language Switch ========== */
 function chooseLang(lang){
-  // hide logo area
-  const logoArea = document.getElementById("logoArea");
-  if(logoArea) logoArea.style.display = "none";
-
-  // mark language in storage
-  let state = loadState();
-  state.lang = lang;
-  saveState(state);
-
-  // show correct content
-  document.querySelectorAll(".content").forEach(c=>{ c.classList.remove("active"); c.setAttribute("aria-hidden","true"); });
-  const sel = document.getElementById(lang);
-  if(sel){
-    sel.classList.add("active");
-    sel.setAttribute("aria-hidden","false");
-  }
-
-  // set banners for language (if custom)
-  const topImg = document.getElementById(`${lang}-top`);
-  const botImg = document.getElementById(`${lang}-bottom`);
-  if(topImg) topImg.src = DEFAULT_TOP[lang] || DEFAULT_TOP.hi;
-  if(botImg) botImg.src = DEFAULT_BOTTOM[lang] || DEFAULT_BOTTOM.hi;
-
-  // load saved form data
-  loadForm(lang);
-  // scroll to content
+  document.getElementById("logoArea").style.opacity="0";
+  setTimeout(()=>{document.getElementById("logoArea").style.display="none";},700);
+  const s=loadState(); s.lang=lang; saveState(s);
+  document.querySelectorAll(".content").forEach(c=>c.classList.remove("active"));
+  document.getElementById(lang).classList.add("active");
+  renderList(lang);
   window.scrollTo({top:0,behavior:"smooth"});
 }
 
-/* load form values for language */
-function loadForm(lang){
-  const state = loadState();
-  const vals = (state.data && state.data[lang]) ? state.data[lang] : {};
-  const nameEl = document.getElementById(`name-${lang}`);
-  const mobileEl = document.getElementById(`mobile-${lang}`);
-  if(nameEl) nameEl.value = vals.name || "";
-  if(mobileEl) mobileEl.value = vals.mobile || "";
-}
-
-/* save form values for language (manual save) */
-function saveForm(lang){
-  const name = (document.getElementById(`name-${lang}`)?.value || "").trim();
-  const mobile = (document.getElementById(`mobile-${lang}`)?.value || "").trim();
-  const state = loadState();
-  state.data = state.data || { hi:{},en:{},gu:{} };
-  state.data[lang] = { name, mobile };
-  saveState(state);
-  alert("✅ डेटा सेव हो गया (" + (lang==='hi'?'हिंदी':(lang==='en'?'English':'ગુજરાતી')) + ")");
-}
-
-/* clear form for language */
-function clearForm(lang){
-  if(!confirm("क्या आप फॉर्म क्लियर करना चाहते हैं? / Clear form?")) return;
-  const nameEl = document.getElementById(`name-${lang}`);
-  const mobileEl = document.getElementById(`mobile-${lang}`);
-  if(nameEl) nameEl.value = "";
-  if(mobileEl) mobileEl.value = "";
-  const state = loadState();
-  state.data = state.data || { hi:{},en:{},gu:{} };
-  state.data[lang] = {};
-  saveState(state);
-  alert("🗑️ चालू भाषा का डेटा क्लियर कर दिया गया।");
-}
-
-/* Auto-save currently visible language every 5 seconds */
+/* ========== Auto Save Backup ========== */
 setInterval(()=>{
-  const state = loadState();
-  const lang = state.lang;
-  if(!lang) return; // if logo still showing, nothing
-  const nameEl = document.getElementById(`name-${lang}`);
-  const mobileEl = document.getElementById(`mobile-${lang}`);
-  const name = nameEl ? (nameEl.value||"") : "";
-  const mobile = mobileEl ? (mobileEl.value||"") : "";
-  state.data = state.data || { hi:{},en:{},gu:{} };
-  state.data[lang] = { name, mobile };
-  saveState(state);
-  // console.log("Autosaved", lang, new Date().toLocaleTimeString());
-}, 5000);
+  const s=loadState(); saveState(s);
+},5000);
 
-/* On page load: if user had selected a language before, open that language directly (logo hidden) */
-window.addEventListener('DOMContentLoaded', ()=>{
-  const state = loadState();
-  const last = state.lang;
-  if(last && (last==='hi' || last==='en' || last==='gu')){
-    // hide logo and show last language
-    document.getElementById("logoArea").style.display = "none";
-    chooseLang(last);
-  } else {
-    // show logo (user must pick a language)
-    document.getElementById("logoArea").style.display = "flex";
-  }
+/* ========== Auto open last language ========== */
+window.addEventListener("DOMContentLoaded",()=>{
+  const s=loadState();
+  if(s.lang){document.getElementById("logoArea").style.display="none";document.getElementById(s.lang).classList.add("active");renderList(s.lang);}
+  else{document.getElementById("logoArea").style.display="flex";}
 });
 </script>
-
 </body>
 </html>
