--- a/index.html
+++ b/index.html
@@ -3,124 +3,38 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>RJ पापड़ — Multilingual AutoSave + Splash Logo</title>
-
+<title>RJ पापड़ — Multilingual + Splash Logo (Fixed)</title>
 <style>
   *{margin:0;padding:0;box-sizing:border-box}
-  html,body{
-    height:100%;
-    width:100%;
-    font-family:'Noto Sans Devanagari',sans-serif;
-    background:#fff8e1;
-    color:#222;
-    overflow-x:hidden;
-  }
-
-  /* 🔶 Splash Logo (fullscreen page) */
-  #logoArea {
-    position:fixed;
-    top:0;left:0;
-    width:100vw;height:100vh;
-    background:#fff;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    z-index:1000;
-    transition:opacity 0.8s ease;
-  }
-  #logoArea img {
-    width:70vw;          /* logo छोटा किया */
-    max-width:300px;
-    height:auto;
-    margin-bottom:20px;
-    border-radius:10px;
-  }
-  .lang-bar {
-    display:flex;
-    gap:10px;
-  }
-  .lang-btn {
-    background:#ffc107;
-    border:none;
-    padding:10px 18px;
-    border-radius:8px;
-    font-weight:700;
-    cursor:pointer;
-    box-shadow:0 2px 4px rgba(0,0,0,0.15);
-  }
+  html,body{height:100%;width:100%;font-family:'Noto Sans Devanagari',sans-serif;background:#fff8e1;color:#222;overflow-x:hidden}
+  /* Splash */
+  #logoArea{position:fixed;top:0;left:0;width:100vw;height:100vh;background:#fff;display:flex;flex-direction:column;justify-content:center;align-items:center;z-index:1000;transition:opacity .6s ease}
+  #logoArea img{width:70vw;max-width:320px;height:auto;margin-bottom:18px;border-radius:10px}
+  .lang-bar{display:flex;gap:10px}
+  .lang-btn{background:#ffc107;border:none;padding:10px 18px;border-radius:8px;font-weight:700;cursor:pointer;box-shadow:0 2px 4px rgba(0,0,0,.15)}
   .lang-btn:hover{background:#ffb300}
-
-  /* 🔸 Content section */
-  .site {
-    max-width:900px;
-    margin:0 auto;
-    padding:12px;
-  }
-  .content { display:none; }
-  .content.active { display:block; animation:fadeIn .3s ease-in; }
+  /* Site */
+  .site{max-width:980px;margin:0 auto;padding:12px}
+  .content{display:none}
+  .content.active{display:block;animation:fadeIn .25s}
   @keyframes fadeIn{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:none}}
-
-  .banner { width:100%; display:block; border-radius:0; margin:10px 0; }
-  h1 { text-align:center; color:#c47f00; margin:10px 0 15px; font-size:22px; }
-
-  .form-card {
-    background:#fff;
-    padding:16px;
-    border-radius:10px;
-    box-shadow:0 4px 10px rgba(0,0,0,0.08);
-    max-width:700px;
-    margin:10px auto;
-  }
-  input {
-    width:100%;
-    padding:10px;
-    margin:6px 0;
-    border:1px solid #ccc;
-    border-radius:6px;
-    font-size:15px;
-  }
-  .controls { display:flex; gap:8px; margin-top:8px; flex-wrap:wrap; }
-  .save-btn {
-    background:#ffc107;
-    border:none;
-    padding:10px 16px;
-    border-radius:8px;
-    font-weight:700;
-    cursor:pointer;
-  }
+  .banner{width:100%;display:block;border-radius:0;margin:10px 0;object-fit:cover}
+  h1{text-align:center;color:#c47f00;margin:10px 0 15px;font-size:22px}
+  .form-card{background:#fff;padding:16px;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.08);max-width:720px;margin:10px auto}
+  input{width:100%;padding:10px;margin:6px 0;border:1px solid #ccc;border-radius:6px;font-size:15px}
+  .controls{display:flex;gap:8px;margin-top:8px;flex-wrap:wrap}
+  .save-btn{background:#ffc107;border:none;padding:10px 16px;border-radius:8px;font-weight:700;cursor:pointer}
   .save-btn:hover{background:#ffb300}
-  .small-btn{
-    background:#eee;
-    border:none;
-    padding:8px 10px;
-    border-radius:8px;
-    cursor:pointer;
-  }
-  .reg-item{
-    background:#fff7e6;
-    padding:8px;
-    margin:8px 0;
-    border-radius:8px;
-    display:flex;
-    flex-wrap:wrap;
-    align-items:center;
-    gap:8px;
-  }
-  .icon-btn{
-    background:#fff;
-    border:1px solid #ddd;
-    padding:6px 8px;
-    border-radius:6px;
-    cursor:pointer;
-  }
-  footer{ text-align:center; color:#666; font-size:13px; margin:20px 0;}
+  .small-btn{background:#eee;border:none;padding:8px 10px;border-radius:8px;cursor:pointer}
+  .reg-item{background:#fff7e6;padding:8px;margin:8px 0;border-radius:8px;display:flex;flex-wrap:wrap;align-items:center;gap:8px}
+  .icon-btn{background:#fff;border:1px solid #ddd;padding:6px 8px;border-radius:6px;cursor:pointer}
+  footer{text-align:center;color:#666;margin:20px 0;font-size:13px}
+  @media(max-width:520px){#logoArea img{width:80vw}}
 </style>
 </head>
-
 <body>
 
-<!-- 🟢 Splash Logo -->
+<!-- SPLASH LOGO (now fixed: will stay until user clicks a language) -->
 <div id="logoArea">
   <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png" alt="RJ Logo">
   <div class="lang-bar">
@@ -130,14 +44,11 @@
   </div>
 </div>
 
-<!-- 🔸 Website content -->
 <div class="site">
-
   <!-- HINDI -->
   <section id="hi" class="content">
     <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
     <h1>RJ पापड़ में आपका स्वागत है!</h1>
-
     <div class="form-card">
       <div class="controls">
         <button class="save-btn" onclick="saveAll('hi')">💾 सेव करें</button>
@@ -145,7 +56,6 @@
       </div>
       <div id="regs-hi"></div>
     </div>
-
     <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
   </section>
 
@@ -153,7 +63,6 @@
   <section id="en" class="content">
     <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
     <h1>Welcome to RJ Papad!</h1>
-
     <div class="form-card">
       <div class="controls">
         <button class="save-btn" onclick="saveAll('en')">💾 Save</button>
@@ -161,7 +70,6 @@
       </div>
       <div id="regs-en"></div>
     </div>
-
     <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
   </section>
 
@@ -169,7 +77,6 @@
   <section id="gu" class="content">
     <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
     <h1>RJ પાપડ માં આપનું સ્વાગત છે!</h1>
-
     <div class="form-card">
       <div class="controls">
         <button class="save-btn" onclick="saveAll('gu')">💾 સેવ કરો</button>
@@ -177,7 +84,6 @@
       </div>
       <div id="regs-gu"></div>
     </div>
-
     <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
   </section>
 </div>
@@ -187,86 +93,56 @@
 <script>
 const STORAGE_KEY="rjpapad_multi_v3";
 
-/* ========== State functions ========== */
-function loadState(){
-  try{
-    const raw=localStorage.getItem(STORAGE_KEY);
-    if(!raw)return{lang:null,data:{hi:{list:[]},en:{list:[]},gu:{list:[]}}};
-    const obj=JSON.parse(raw);
-    obj.data=obj.data||{hi:{list:[]},en:{list:[]},gu:{list:[]}};
-    return obj;
-  }catch{return{lang:null,data:{hi:{list:[]},en:{list:[]},gu:{list:[]}}}}
-}
-function saveState(s){localStorage.setItem(STORAGE_KEY,JSON.stringify(s));}
+/* State helpers */
+function loadState(){ try{ const r=localStorage.getItem(STORAGE_KEY); if(!r) return {lang:null,data:{hi:{list:[]},en:{list:[]},gu:{list:[]}}}; const o=JSON.parse(r); o.data=o.data||{hi:{list:[]},en:{list:[]},gu:{list:[]}}; return o;}catch{return {lang:null,data:{hi:{list:[]},en:{list:[]},gu:{list:[]}}}}}
+function saveState(s){ localStorage.setItem(STORAGE_KEY,JSON.stringify(s)); }
 
-/* ========== Render forms ========== */
+/* Render registration list */
 function renderList(lang){
   const c=document.getElementById(`regs-${lang}`);
   c.innerHTML="";
-  const st=loadState();
-  const list=st.data[lang].list||[];
-  if(list.length===0){addRegistrant(lang);return;}
+  const s=loadState();
+  const list=s.data[lang].list||[];
+  if(list.length===0){ addRegistrant(lang); return; }
   list.forEach((r,i)=>{
-    const div=document.createElement("div");
-    div.className="reg-item";
-    const name=document.createElement("input");
-    name.placeholder=lang==="hi"?"नाम (वैकल्पिक)":lang==="en"?"Name (Optional)":"નામ (વૈકલ્પિક)";
-    name.value=r.name||"";
-    const mobile=document.createElement("input");
-    mobile.placeholder=lang==="hi"?"मोबाइल नंबर (अनिवार्य)":lang==="en"?"Mobile Number (Required)":"મોબાઇલ નંબર (આવશ્યક)";
-    mobile.value=r.mobile||"";
-    name.oninput=()=>update(lang,i,name.value,mobile.value);
-    mobile.oninput=()=>update(lang,i,name.value,mobile.value);
-    const del=document.createElement("button");
-    del.className="icon-btn";
-    del.textContent="🗑️";
-    del.onclick=()=>delItem(lang,i);
-    div.append(name,mobile,del);
-    c.append(div);
+    const div=document.createElement("div"); div.className="reg-item";
+    const name=document.createElement("input"); name.placeholder = lang==="hi"?"नाम (वैकल्पिक)":lang==="en"?"Name (Optional)":"નામ (વૈકલ્પિક)"; name.value=r.name||"";
+    const mobile=document.createElement("input"); mobile.placeholder = lang==="hi"?"मोबाइल नंबर (अनिवार्य)":lang==="en"?"Mobile Number (Required)":"મોબાઇલ નંબર (આવશ્યક)"; mobile.value=r.mobile||"";
+    name.oninput=()=>update(lang,i,name.value,mobile.value); mobile.oninput=()=>update(lang,i,name.value,mobile.value);
+    const del=document.createElement("button"); del.className="icon-btn"; del.textContent="🗑️"; del.onclick=()=>delItem(lang,i);
+    div.append(name,mobile,del); c.append(div);
   });
 }
-function addRegistrant(lang){
-  const s=loadState();
-  s.data[lang].list.push({name:"",mobile:""});
-  saveState(s);
-  renderList(lang);
-}
-function update(lang,i,name,mobile){
-  const s=loadState();
-  s.data[lang].list[i]={name,mobile};
-  saveState(s);
-}
-function delItem(lang,i){
-  const s=loadState();
-  s.data[lang].list.splice(i,1);
-  saveState(s);
-  renderList(lang);
-}
-function saveAll(lang){
-  alert("✅ "+(lang==="hi"?"डेटा सेव हो गया":"en"===lang?"Data Saved":"ડેટા સેવ થઈ ગયો"));
-}
 
-/* ========== Language Switch ========== */
+/* Add / update / delete */
+function addRegistrant(lang){ const s=loadState(); s.data[lang].list.push({name:"",mobile:""}); saveState(s); renderList(lang); }
+function update(lang,i,name,mobile){ const s=loadState(); s.data[lang].list[i]={name,mobile}; saveState(s); }
+function delItem(lang,i){ if(!confirm("क्या हटाना है? / Delete?")) return; const s=loadState(); s.data[lang].list.splice(i,1); saveState(s); renderList(lang); }
+function saveAll(lang){ alert("✅ "+(lang==="hi"?"डेटा सेव हो गया":"en"===lang?"Data Saved":"ડેટા સેવ થઈ ગયો")); }
+
+/* Choose language (triggered only by user click) */
 function chooseLang(lang){
-  document.getElementById("logoArea").style.opacity="0";
-  setTimeout(()=>{document.getElementById("logoArea").style.display="none";},700);
-  const s=loadState(); s.lang=lang; saveState(s);
+  // hide logo smoothly
+  const logo = document.getElementById("logoArea");
+  logo.style.opacity="0";
+  setTimeout(()=>{ logo.style.display="none"; }, 650);
+
+  // set state and show content
+  const st = loadState(); st.lang = lang; saveState(st);
   document.querySelectorAll(".content").forEach(c=>c.classList.remove("active"));
   document.getElementById(lang).classList.add("active");
   renderList(lang);
   window.scrollTo({top:0,behavior:"smooth"});
 }
 
-/* ========== Auto Save Backup ========== */
-setInterval(()=>{
-  const s=loadState(); saveState(s);
-},5000);
+/* Periodic auto-save backup (redundant because update() saves on input) */
+setInterval(()=>{ const s=loadState(); saveState(s); },5000);
 
-/* ========== Auto open last language ========== */
-window.addEventListener("DOMContentLoaded",()=>{
-  const s=loadState();
-  if(s.lang){document.getElementById("logoArea").style.display="none";document.getElementById(s.lang).classList.add("active");renderList(s.lang);}
-  else{document.getElementById("logoArea").style.display="flex";}
+/* On load: show logo always (do NOT auto-open last language) */
+window.addEventListener("DOMContentLoaded", ()=>{
+  document.getElementById("logoArea").style.display = "flex";
+  // If you want to auto-open last language instead, comment out above line and uncomment these:
+  // const s = loadState(); if(s.lang){ chooseLang(s.lang); }
 });
 </script>
 </body>
